--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link rel="stylesheet" href="styles/styles.css"
 </head>
 <body>
 <p>Valamai 14:48</p>
-<p>Masodik <br>15:08</p>
 
+<p>Masodik <br>15:08</p>
+<h1> h1 elem a stilusban</h1>
 </body>
 </html>
