--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link rel="stylesheet" href="styles/styles.css"
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-<p>Valamai <b>atvaltas githubra</b>14:48</p>
+<p>Valamai <b>atvaltas githubra</b>14:48</p> 
 
 <p>Masodik <br>15:08</p>
 <h1> h1 elem a stilusban</h1>
